--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,21 @@
-{"compilerOptions":{"module":"nodenext","rootDir":"src","outDir":"dist","strict":true,"target":"es2022","moduleResolution":"node16","declaration":true,"declarationMap":true,"sourceMap":true,"resolveJsonModule":true},"include":["./src/**/*"],"exclude":["node_modules"]}
+{
+  "compilerOptions": {
+    "module": "nodenext",
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
+    "target": "es2022",
+    "moduleResolution": "node16",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true
+  },
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
